# TASAI_ERA

./: README.md
EDA_Tool/: .gitignore  README.md  app.py  pyproject.toml  test.ipynb
EDA_Tool/services/: gemini_service.py  test.ipynb
EDA_Tool/static/: app.js  styles.css
EDA_Tool/templates/: index.html
EDA_Tool_AWS/: config.py  deploy-cloudshell-optimized.sh  deploy-cloudshell.sh  deploy-lambda.sh  lambda_handler.py  requirements-lambda.txt
EDA_Tool_AWS/services/: gemini_service.py
EDA_Tool_AWS/static/: app.js
EDA_Tool_AWS/templates/: index.html
MNIST_Model/: README.md
MNIST_Model/Notebooks/: model_training.ipynb
Test/: 101.ipynb
Theme_pallete/chrome-color-font-scraping/: INSTALLATION.md  README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
Theme_pallete/chrome-theme-picker-extension/: INSTALL.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  manifest.json  package.json  popup.css  popup.html  test.html  webpack.config.js
Theme_pallete/chrome-theme-picker-extension/public/: index.html
Theme_pallete/chrome-theme-picker-extension/src/background/: background.js
Theme_pallete/chrome-theme-picker-extension/src/components/: AccessibilityAudit.jsx  ColorHistory.jsx  ColorPicker.jsx  DummyUIBlocks.jsx  ExportPanel.jsx  FontInventory.jsx  PaletteDisplay.jsx  PaletteEditor.jsx  PaletteGenerator.jsx  PaletteShare.jsx  ThemePreview.jsx
Theme_pallete/chrome-theme-picker-extension/src/content/: content.js
Theme_pallete/chrome-theme-picker-extension/src/options/: Options.css  Options.jsx  options.html
Theme_pallete/chrome-theme-picker-extension/src/popup/: Popup.jsx  index.js  popup.css  popup.html  popup.js
Theme_pallete/chrome-theme-picker-extension/src/styles/: figma-theme.css  variables.css
Theme_pallete/chrome-theme-picker-extension/src/utils/: accessibilityUtils.js  colorUtils.js  fontUtils.js  paletteUtils.js  storage.js
eda_web_app/: README.md  app.py  main.py  pyproject.toml
eda_web_app/static/: app.js  styles.css
eda_web_app/templates/: index.html  report_template.html
s2_class_demo/: .gitignore  README.md  pyproject.toml
s2_class_demo/static/: app.js
web_app_ec2/: README.md  main.py  pyproject.toml
web_app_ec2/static/: app.js  styles.css
web_app_ec2/templates/: index.html
