[project]
name = "eda-web-app"
version = "0.1.0"
description = "Exploratory Data Analysis Web Application"
authors = [
    {name = "Krishnakanth", email = "krishnasubrahmanya25@gmail.com"}
]
dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jinja2>=3.1.0",
    "werkzeug>=2.3.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
