[project]
name = "web-app-ec2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"]
